backend-postgrest/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dvdshop-api-postgrest
spec:
  selector:
    matchLabels:
      app: dvdshop-api-postgrest
  template:
    metadata:
      labels:
        app: dvdshop-api-postgrest
    spec:
      containers:
      - name: dvdshop-api-postgrest
        image: postgrest/postgrest
        resources:
          limits:
            memory: "1G"
            cpu: "1000m"
          requests:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 3000
