backend-postgrest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dvdshop-api-postgrest
spec:
  selector:
    app: dvdshop-api-postgrest
  ports:
  - port: 3000
    targetPort: 3000
